* Tweak RELEASE-NOTES to how they have to be now (Fix headings, escape wikitext, don't wrap long lines) * Have the RELEASE-NOTES page in the installer link to bug numbers and Manual pages
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/branches/new-installer@55131 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/phase3/skins/common/config.css
+++ b/phase3/skins/common/config.css
@@ -144,3 +144,8 @@
 	/* If you change this height, also change it in WebInstaller_Options::submitCC() */
 	height: 54em; 
 }
+
+.config-buglink a {
+	background: none !important;
+	padding: 0 !important;
+}
